gap on header of display number of tasks box fixed

--- a/src/components/TaskDisplay.module.css
+++ b/src/components/TaskDisplay.module.css
@@ -20,7 +20,7 @@
   justify-content: space-between;
   align-items: flex-end;
   padding: 0rem;
-  gap: 27rem;
+  gap: 27.9rem;
   font-size: 0.875rem;
   line-height: 1.063rem;
 }
